# flutter_cpp_with_opencv

./: README.md  pubspec.yaml
android/: .gitignore  CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/native_with_opencv/: NativeWithOpencvPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/native_with_opencv_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: native_with_opencv.podspec
ios/Classes/: NativeWithOpencvPlugin.h  NativeWithOpencvPlugin.m  SwiftNativeWithOpencvPlugin.swift  native_add.cpp
lib/: native_with_opencv.dart
test/: native_with_opencv_test.dart
